fixing spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -110,8 +110,8 @@
 .content-col {
     float: left;
     margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-    width: 95%;
+    /* padding-left: $spacing-unit / 2;
+    width: 95%; */
 }
 
 @include media-query($on-laptop) {
